fix --enable-preview