@@ -5,7 +5,7 @@ description = "OkHttp 5 Spring Boot Starter"
 
 dependencies {
     api platform(project(":okhttp-spring-boot-dependencies"))
-    api platform('com.squareup.okhttp3:okhttp-bom:5.3.2')
+    api platform('com.squareup.okhttp3:okhttp-bom:5.+')
 
     api 'org.springframework.boot:spring-boot-starter'
     api project(':okhttp-spring-boot-autoconfigure')
@@ -13,4 +13,18 @@ dependencies {
     api 'com.squareup.okhttp3:okhttp'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+compileJava { // tasks.named('compileJava')
+    inputs.files(processResources)
+    options.compilerArgs += ['--enable-preview']
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += ['--enable-preview']
+}
+
+tasks.named('test', Test) {
+    useJUnitPlatform()
+    jvmArgs("--enable-preview", "-XX:+EnableDynamicAgentLoading")
 }
